tester/testsuite/bad/bad028.jl
// cannot define String variable
int main(){
    String x;
    return 0;
}
